sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythone-sample-app
  labels:
    app: pythone-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pythone-sample-app
  template:
    metadata:
      labels:
        app: pythone-sample-app
    spec:
      containers:
        - name: pyapp
          image: jay75chauhan/pythone-sample-app:v1
          # in config map use mounte to get value without container re start
          volumeMounts:
            - name: db-connection
              mountPath: "/opt"
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret-volume"
      volumes:
        - name: db-connection
          configMap:
            name: test-cm
        - name: secret-volume
          secret:
            secretName: dotfile-secret
