sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-service
spec:
  type: NodePort
  selector:
    app: pythone-sample-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
