sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: py
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 80
